--- a/src/Module/About/about.module.css
+++ b/src/Module/About/about.module.css
@@ -2,3 +2,11 @@
     transform: scale(1.1);
     transition: transform 0.2s;
 }
+
+.about-section {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    transition: all 0.3s ease-in-out;
+}
